recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:1: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    { subtree()
                                                                            ^